--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "redux": "^4.2.1",
